apps/getting-started-bgd/overlays/getting-started-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: getting-started
  name: getting-started
  namespace: getting-started
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: getting-started
---
